--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,8 @@ requires = ["poetry-core>=1.0.0"]
 line_length = 100
 profile = "black"
 
-[tol.black]
+[tool.black]
 line-length = 100
+
+[tool.mypy]
+ignore_missing_imports = true
