--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,8 +5,18 @@ on:
 
 jobs:
   deploy_to_pipy:
+    name: Publish package
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v2
         with:
-          python_version: 3.9
+          python-version: 3.9
+      - uses: actions/checkout@v2
+      - run: pip install --upgrade pip poetry
+        name: Install dependencies
+      - run: poetry build
+        name: Build package
+      - run: poetry publish
+        env:
+          PYPI_USERNAME: __token__
+          PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
