--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,6 +2,8 @@ on:
   push:
     tags:
       - "v*"
+  pull_request:
+    branches: ["main", "develop"]
 
 jobs:
   deploy_to_pipy:
@@ -17,6 +19,10 @@ jobs:
       - run: poetry build
         name: Build package
       - run: poetry publish
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           PYPI_USERNAME: __token__
           PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      - uses: softprops/action-gh-release@v0.1.14
+        with:
+          files: dist/*
