Fixed deployment when running for a pull request.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,5 +24,6 @@ jobs:
           PYPI_USERNAME: __token__
           PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       - uses: softprops/action-gh-release@v0.1.14
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/*
