--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
     branches:
       - "main"
       - "develop"
+  push:
+    tags:
+      - "v*"
 
 jobs:
   test:
@@ -40,3 +43,26 @@ jobs:
           coveralls --service=github --finish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy:
+    name: Publish package
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - uses: actions/checkout@v2
+      - run: pip install --upgrade pip poetry
+        name: Install dependencies
+      - run: poetry build
+        name: Build package
+      - run: poetry publish
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          PYPI_USERNAME: __token__
+          PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+      - uses: softprops/action-gh-release@v0.1.14
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist/*
