--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ exclude = [
 ]
 name = "fastapi-firebase"
 readme = "README.md"
-version = "0.1.0"
+version = "0.1.1a1"
 
 [tool.poetry.dependencies]
 fastapi = "^0.60.0"
