Added a debug line.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
     container:
       image: python:3-slim
     steps:
+      - run: echo ${{ github.ref }}
       - name: Finished
         run: |
           pip3 install --upgrade coveralls
