--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
     environment: test_deployment
     needs: test
     name: Test publish to PyPI
-    if: ${{startsWith(github.ref, 'refs/heads/') || startsWith(github.ref, 'refs/pulls/')}}
+    if: startsWith(github.ref, 'refs/heads/')
     steps:
       - name: Publish to TestPyPI
         uses: JRubics/poetry-publish@v1.10
