--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
     name: Test publish to PyPI
     if: startsWith(github.ref, 'refs/heads/')
     steps:
+      - uses: actions/checkout@v2
       - name: Publish to TestPyPI
         uses: JRubics/poetry-publish@v1.10
         with:
@@ -86,6 +87,7 @@ jobs:
     name: Publish to PyPI
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+      - uses: actions/checkout@v2
       - name: Publish to PyPI
         uses: JRubics/poetry-publish@v1.10
         with:
