--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,8 @@ jobs:
         with:
           repository_name: testpypi
           repository_url: ${{ secrets.PYPI_REPOSITORY }}
-          pypi_token: ${{ secrets.pypi_token }}
+          repository_username: __token__
+          repository_password: ${{ secrets.pypi_token }}
 
   publish_to_pypi:
     runs-on: ubuntu-latest
@@ -93,4 +94,5 @@ jobs:
         with:
           repository_name: testpypi
           repository_url: ${{ secrets.PYPI_REPOSITORY }}
-          pypi_token: ${{ secrets.pypi_token }}
+          repository_username: __token__
+          repository_password: ${{ secrets.pypi_token }}
