Fixed coveralls send process to send only for pushes to a branch.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
     name: Indicate completion to coveralls.io
     needs: test
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/')
     container:
       image: python:3-slim
     steps:
