Better certificate load (#3)
* Updated pyproject with settings for pytest.

* Changed the way the setup call sets the certificate.

* Improved initialization and destruction of the firebase app. Also changed the way the setup function takes the credentials.

* Added more tests, reached 100% coverage.

* Fixed a mypy error.

* Fixed another MyPy issue.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,10 @@ line-length = 100
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "-ra -q --cov=fastapi_firebase"
+minversion = "6.0"
+testpaths = [
+  "tests",
+]
