--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,6 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-.vscode/settings.json
+
+# Firebase credential for the testing app
+.vscode/firebase.json
