--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.8"
 python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
+aiofiles = "^0.8.0"
 black = "^21.12b0"
 flake8 = "^4.0.1"
 ipython = "^8.0.1"
@@ -25,6 +26,7 @@ mypy = "^0.931"
 pre-commit = "^2.17.0"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
+uvicorn = {extras = ["standard"], version = "^0.17.3"}
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
