--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ exclude = [
 ]
 name = "fastapi-firebase"
 readme = "README.md"
-version = "0.2.0"
+version = "0.2.1"
 
 [tool.poetry.dependencies]
-fastapi = "^0.60.0"
+fastapi = ">0.60.0<1.0.0"
 firebase-admin = "^5.2.0"
 python = "^3.8"
 python-multipart = "^0.0.5"
